Source/WebKit/UIProcess/API/glib/WebKitUserContentFilterStore.cpp
@@ -29,6 +29,7 @@
 #include "APIContentRuleList.h"
 #include "APIContentRuleListStore.h"
 #include "WebKitError.h"
+#include "WebKitInitialize.h"
 #include "WebKitUserContent.h"
 #include "WebKitUserContentPrivate.h"
 #include <WebCore/ContentExtensionError.h>
@@ -39,6 +40,8 @@
 #include <wtf/glib/GRefPtr.h>
 #include <wtf/glib/GUniquePtr.h>
 #include <wtf/glib/WTFGType.h>
+
+using namespace WebKit;
 
 /**
  * SECTION: WebKitUserContentFilterStore
@@ -116,6 +119,8 @@ static void webkitUserContentFilterStoreConstructed(GObject* object)
 
 static void webkit_user_content_filter_store_class_init(WebKitUserContentFilterStoreClass* storeClass)
 {
+    webkitInitialize();
+
     GObjectClass* gObjectClass = G_OBJECT_CLASS(storeClass);
 
     gObjectClass->get_property = webkitUserContentFilterStoreGetProperty;
